fix: text content; alignment at adress element and header

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -27,6 +27,7 @@
 
   & ul li {
     display: flex;
+    align-items: center;
     margin-block: var(--spacing-m);
 
     &:last-of-type {
